--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "main": "server.js",
   "private": true,
   "scripts": {
-    "clean": "rm -rf dist",
-    "watch": "webpack --watch",
-    "prebuild": "npm run clean -s; npm install",
-    "build": "webpack --progress --colors",
-    "start": "node server.js"
+    "clean": "rm -rf dist && rm -rf node_modules",
+    "heroku-prebuild": "scripts/deployment_react.sh",
+    "heroku-postbuild": "scripts/deployment_cleanup.sh",
+    "start": "node server.js",
+    "rebuild": "webpack -d --progress --colors",
+    "watch": "webpack -d --progress --watch"
   },
   "repository": {
     "type": "",
     "url": ""
   },
   "author": "Bobby King",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "bugs": {
     "url": "https://github.com/gittheking/react_template/issues"
   },
@@ -25,11 +26,11 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
-    "pg-promise": "^5.2.1"
+    "pg-promise": "^5.2.7"
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-core": "^6.10.4",
+    "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-strict-mode": "^6.11.3",
     "babel-preset-es2015": "^6.9.0",
@@ -40,11 +41,10 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "html-webpack-template": "^5.0.0",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^1.13.1"
   }
 }
