--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/gittheking/react_template#readme",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
@@ -41,6 +42,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "html-webpack-template": "^5.0.0",
+    "postcss-loader": "^1.1.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "style-loader": "^0.13.1",
